1999-02-19  Adam Fedor  <fedor@gnu.org>

	* subproject.make: New file.
   	* common.make (SUBPROJECT_PRODUCT): New variable so all
	makefiles agree on the name of the object a subproject produces. 
 	* rules.make:  Added recursive invokation of subproject makefiles
	in the %.build target.
	* application.make, library.make, ... (SUBPROJECT_OBJ_FILES): New
	dependency. 
	* target.make (OBJ_MERGE_CMD): For merging subproject
	files. (patches from Jonathan Gapen
	<jagapen@whitewater.chem.wisc.edu>).

Wed Feb 17 17:15:47 1999  Adam Fedor  <fedor@ultra.doc.com>

	* bundle.make (PRINCIPAL_CLASS): Override if not set (Report from
	Julian van Greunen <vangrn@lantic.co.za>). 

1999-02-17  Scott Christley  <scottc@net-community.com>

	* opentool.in: New file.
	* rootinstall.sh: New file.
	* rootuninstall.sh: New file.
	* openapp.in: Add help text.
	* debugapp.in: Add help text.
	* configure.in: Add opentool.in.
	* configure: Regenerate.
	* GNUmakefile.in: Install/uninstall new files.

Tun Feb 16 16:26:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* services.make: Tidied with removal of some unneccessary dependencies.

1999-02-14  Scott Christley  <scottc@net-community.com>

	* ld_lib_path.sh (DYLD_LIBRARY_PATH, LD_LIBRARY_PATH): Add the tool
	library path.
	* ld_lib_patch.csh (DYLD_LIBRARY_PATH, LD_LIBRARY_PATH): Likewise.

Mon Feb 15 1999		Michael Hanni <mhanni@sprintmail.com>

	* Added IRIX to target.make as requested.

Mon Feb 15  8:48:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* aggregate.make: Strip space from name variable before use.
	* application.make: ditto
	* bundle.make: ditto
	* documentation.make: ditto
	* library.make: ditto
	* objc.make: ditto
	* service.make: ditto
	* test-application.make: ditto
	* test-library.make: ditto
	* test-tool.make: ditto
	* tool.make: ditto

Mon Feb  8 08:24:39 1999  Masatake Yamato  <masata-y@is.aist-nara.ac.jp>

        * ld_lib_path.csh: Rename additional_library_paths to